--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,10 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
+<body>	
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
 <%= yield %>
 
 </body>
