--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-
+<% if current_user%>
+<%= link_to "Sign out", destroy_user_session_path, :method => :delete, :class =>"btn btn-primary" %>
+<% end %>
 <body>	
 	<p class="notice"><%= notice %></p>
 	<p class="alert"><%= alert %></p>
